tests/valid/functions/variable_as_arg.rs
/*
return: 2
*/

foo(x: int): int {
    return x + 1;
}

main(): int {
    a: int = 1;
    return foo(a);
}
