tests/invalid/functions/bad_arg.rs
/*
fail: 1
*/

foo(a: int): int{
    return 3 + a;
}

main(): int{
    return foo();
}